--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,12 @@
         "sstream": "cpp",
         "tuple": "cpp",
         "utility": "cpp",
-
+        "algorithm": "cpp",
+        "iterator": "cpp",
+        "map": "cpp",
+        "memory_resource": "cpp",
+        "optional": "cpp",
+        "random": "cpp",
+        "set": "cpp"
     }
 }
